remove method fixed