@@ -10,7 +10,7 @@ public class MinHeap implements IntQueue{
     public void add(int item) {
         arr.add(item);
         for (int j = arr.size() - 1; j >= 0; j--){
-            Compare(j);
+            CompareChiPar(j);
         }
     }
 
@@ -23,23 +23,37 @@ public class MinHeap implements IntQueue{
     public int remove() {
         int res = arr.get(0);
         arr.set(0, arr.get(arr.size() - 1));
-        arr.remove(arr.size() - 1);
-        for (int j = arr.size() - 1; j >= 0; j--){
-            Compare(j);
+        arr.removeLast();
+        for (int j = 0; j <= arr.size()-1; j++){
+            CompareChilds(j);
         }
         return res;
     }
 
-    public void Compare(int i){
+    public void CompareChiPar(int i){
         int child = arr.get(i);
         int parent = arr.get((i-1)/2);
-        if (parent < child) return;
 
         if (parent > child) {
             int j = parent;
             arr.set((i-1)/2, child);
             arr.set(i, j);
         }
+    }
+
+    private void CompareChilds(int i) {
+        int left = 2*i + 1;
+        int right = 2*i + 2;
+        int smallest = i;
+
+        if (left < arr.size() && arr.get(left) < arr.get(smallest))
+            smallest = left;
+        if (right < arr.size() && arr.get(right) < arr.get(smallest))
+            smallest = right;
+
+        int temp = arr.get(i);
+        arr.set(i, arr.get(smallest));
+        arr.set(smallest, temp);
     }
 
     @Override
@@ -55,6 +69,9 @@ public class MinHeap implements IntQueue{
         min.add(3);
         min.add(6);
         min.add(4);
+        min.add(2);
+        min.add(10);
+        min.add(8);
 
         System.out.println(min);
 
